Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74124

QAbstractItemModelReplica internal error crash

XMLWordPrintable

    • e96d2a9907 (qt/qtremoteobjects/dev) 636173526a (qt/qtremoteobjects/6.3) 636173526a (qt/tqtc-qtremoteobjects/6.3) e96d2a9907 (qt/tqtc-qtremoteobjects/dev) e0269f5f56 (qt/qtremoteobjects/6.4) 5ada39f1c7 (qt/tqtc-qtremoteobjects/6.2)

      After some actions in source model (add/remove/move/change) QAbstractItemModelReplica will crash with Internal error:

      qt.remoteobjects.models: void QAbstractItemModelReplicaImplementation::requestedData(QRemoteObjectPendingCallWatcher*) start= (ModelIndex[row=4, column=0]) end= (ModelIndex[row=5, column=0])
      qt.remoteobjects.models: void fillRow(CacheData*, const IndexValuePair&, const QAbstractItemModel*, const QVector<int>&) row= 4 column= 0
      qt.remoteobjects.models: void fillRow(CacheData*, const IndexValuePair&, const QAbstractItemModel*, const QVector<int>&) existed= false
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) data.size= 7
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 257 data= QVariant(int, 545)
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 258 data= QVariant(int, 2)
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 259 data= QVariant(QString, "Internet")
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 260 data= QVariant(int, 2)
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 261 data= QVariant(int, 32)
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 262 data= QVariant(bool, false)
      qt.remoteobjects.models: void fillCacheEntry(CacheEntry*, const IndexValuePair&, const QVector<int>&) role= 263 data= QVariant(bool, false)
      Internal error: invalid index=ModelIndex[row=5, column=0] in indexList=(ModelIndex[row=5, column=0])
      

      Source model is QSortFilterProxy model which sorts items.

        For Gerrit Dashboard: QTBUG-74124
        # Subject Branch Project Status CR V

            bstottle Brett Stottlemyer
            nowrep David Rosca
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes