Fix race condition when accessing invalid index

This can sometimes happen when clicking fast on different items
in debug mode. This this is a fix by Roman Putintsev.

[ChangeLog][QtRemoteObjects][ModelReplica] Fix race condition when accessing invalid index

Fixes: QTBUG-74124
Change-Id: Ice95b4f91b50173ce804f3d664e9b12a4c74e1ce
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit e96d2a9907adfefb6318d3085c55b8cfb6e44638)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>